<resources>
    <string name="app_name">Bloody Pressure</string>
    <string name="_0">0</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="pulse">Pulse</string>
    <string name="savebutton">SaveButton</string>
    <string name="text_favorites">Foo1</string>
    <string name="add">add</string>
    <string name="list">list</string>
    <string name="graph">graph</string>
    <string name="settings">settings</string>
</resources>
