<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:enabled="true"
        android:icon="@drawable/material_add_48"
        android:title="@string/add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_list"
        android:enabled="true"
        android:icon="@drawable/material_menu_48"
        android:title="@string/list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_graph"
        android:enabled="true"
        android:icon="@drawable/material_chart_48"
        android:title="@string/graph"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/material_settings_48"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>