<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddActivity">

    <EditText
            android:layout_width="106dp"
            android:layout_height="55dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/systolicValue"
            android:layout_marginBottom="20dp" app:layout_constraintBottom_toTopOf="@+id/textView3"
            android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="139dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="139dp" android:autofillHints=""
            android:hint="@string/_0"/>
    <EditText
            android:layout_width="106dp"
            android:layout_height="55dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/diastolicValue"
            android:layout_marginBottom="20dp" app:layout_constraintBottom_toTopOf="@+id/textView4"
            android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="139dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="139dp" android:hint="@string/_0"
            android:autofillHints=""/>
    <EditText
            android:layout_width="106dp"
            android:layout_height="55dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/pulseValue" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/diastolicValue" android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="139dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="139dp" android:hint="@string/_0" android:autofillHints=""/>
    <TextView
            android:text="@string/systolic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/systolicValue" android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="168dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="167dp" android:textSize="18sp" android:textStyle="bold"/>
    <TextView
            android:text="@string/diastolic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/systolicValue"
            android:layout_marginBottom="5dp" app:layout_constraintBottom_toTopOf="@+id/diastolicValue"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="165dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="165dp" android:textSize="18sp"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/pulse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/pulseValue" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/diastolicValue" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="175dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="175dp" android:textSize="18sp" android:textStyle="bold"/>
    <ImageButton
            android:layout_width="79dp"
            android:layout_height="75dp" app:srcCompat="@drawable/material_save_outline_48x48"
            android:id="@+id/saveBloodPressure" android:contentDescription="@string/savebutton"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="270dp" android:layout_marginTop="400dp"
            app:layout_constraintTop_toTopOf="parent" android:background="@android:color/transparent"
    />

    <include layout="@layout/bottom_navigation_layout"/>

</android.support.constraint.ConstraintLayout>